--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <!-- To use ExternalPreferredCacheDiskCacheFactory to store Glide’s cache on the public sdcard -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-sdk tools:overrideLibrary="androidx.security" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
