Заменить в файле манифеста на полные пути MainActivity и LoginActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.lockwood.themoviedb.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".login.LoginActivity"
+            android:name="com.lockwood.themoviedb.login.LoginActivity"
             android:windowSoftInputMode="adjustResize" />
 
     </application>
