--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
-apply from: rootProject.file('versions.gradle')
+apply from: rootProject.file('buildsystem/versions.gradle')
 
 android {
     compileSdkVersion versions.compileSdk
