--- a/features/glide/build.gradle
+++ b/features/glide/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-apply from: rootProject.file('versions.gradle')
+apply from: rootProject.file('buildsystem/versions.gradle')
 
 android {
     compileSdkVersion versions.compileSdk
