Добавить dependencies.gradle в buildsystem

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 apply from: rootProject.file('buildsystem/versions.gradle')
+apply from: rootProject.file('buildsystem/dependencies.gradle')
 
 android {
     compileSdkVersion versions.compileSdk
@@ -40,17 +41,13 @@ dependencies {
     implementation project(":core")
     implementation project(":features:login")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-//    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-//    implementation 'androidx.cardview:cardview:1.0.0'
-//    implementation 'androidx.preference:preference:1.1.0'
-//    implementation 'androidx.security:security-crypto:1.0.0-alpha02'
+    implementation deps.kotlin.stdlib
+    implementation deps.kotlin.coreKtx
 
-//    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation deps.android.appcompat
+    implementation deps.material.material
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation deps.test.junit
+    androidTestImplementation deps.androidTest.junit
+    androidTestImplementation deps.androidTest.espresso
 }
