--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 apply from: rootProject.file('buildsystem/versions.gradle')
+apply from: rootProject.file('buildsystem/dependencies.gradle')
 
 android {
     compileSdkVersion versions.compileSdk
@@ -19,7 +20,9 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation deps.kotlin.stdlib
+    implementation deps.kotlin.coreKtx
+
+    implementation deps.android.appcompat
+    implementation deps.material.material
 }
