--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 apply from: rootProject.file('buildsystem/versions.gradle')
+apply from: rootProject.file('buildsystem/dependencies.gradle')
 
 android {
     compileSdkVersion versions.compileSdk
@@ -21,7 +22,8 @@ android {
 dependencies {
     implementation project(":core")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation deps.kotlin.stdlib
+
+    implementation deps.android.appcompat
+    implementation deps.material.material
 }
