--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -10,6 +10,7 @@ versions.cardview = "1.0.0"
 versions.preference = "1.1.0"
 versions.security = "1.0.0-alpha02"
 versions.glide = "4.11.0"
+versions.mobius = "1.4.0-beta3"
 
 def testVersions = [:]
 testVersions.junit = "4.12"
@@ -33,6 +34,12 @@ kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 kotlin.coreKtx = "androidx.core:core-ktx:$versions.coreKtx"
 deps.kotlin = kotlin
 
+def mobius = [:]
+mobius.core = "com.spotify.mobius:mobius-core:$versions.mobius"
+mobius.extras = "com.spotify.mobius:mobius-extras:$versions.mobius"
+mobius.android = "com.spotify.mobius:mobius-android:$versions.mobius"
+deps.mobius = mobius
+
 def glide = [:]
 glide.glide = "com.github.bumptech.glide:glide:$versions.glide"
 glide.glideCompiler = "com.github.bumptech.glide:compiler:$versions.glide"
@@ -40,6 +47,7 @@ deps.glide = glide
 
 def test = [:]
 test.junit = "junit:junit:$testVersions.junit"
+test.mobius = "com.spotify.mobius:mobius-test:$versions.mobius"
 deps.test = test
 
 def androidTest = [:]
