--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -26,4 +26,8 @@ dependencies {
 
     implementation deps.android.appcompat
     implementation deps.material.material
+
+    implementation deps.mobius.core
+    implementation deps.mobius.extras
+    implementation deps.mobius.android
 }
