Добавить LoginModel и переместить LoginActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name="com.lockwood.themoviedb.login.ui.LoginActivity"
+            android:name="com.lockwood.themoviedb.login.LoginActivity"
             android:windowSoftInputMode="adjustResize" />
 
     </application>
