--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -37,8 +37,8 @@ kotlin.coreKtx = "androidx.core:core-ktx:$versions.coreKtx"
 deps.kotlin = kotlin
 
 def rxJava = [:]
-rxJava.rx2 = "io.reactivex.rxjava2:rxjava::$versions.rx2"
-rxJava.rxAndroid = "io.reactivex.rxjava2:rxjava::$versions.rxAndroid"
+rxJava.rx2 = "io.reactivex.rxjava2:rxjava:$versions.rx2"
+rxJava.rxAndroid = "io.reactivex.rxjava2:rxjava:$versions.rxAndroid"
 deps.rxJava = rxJava
 
 def mobius = [:]
