--- a/core/build.gradle
+++ b/core/build.gradle
@@ -28,5 +28,6 @@ dependencies {
 
     implementation deps.mobius.core
     implementation deps.mobius.extras
+    implementation deps.mobius.rx2
     implementation deps.mobius.android
 }
