--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -38,7 +38,7 @@ deps.kotlin = kotlin
 
 def rxJava = [:]
 rxJava.rx2 = "io.reactivex.rxjava2:rxjava:$versions.rx2"
-rxJava.rxAndroid = "io.reactivex.rxjava2:rxjava:$versions.rxAndroid"
+rxJava.rxAndroid = "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid"
 deps.rxJava = rxJava
 
 def mobius = [:]
