--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -13,6 +13,7 @@ versions.glide = "4.11.0"
 versions.mobius = "1.4.0-beta3"
 versions.rx2 = "2.2.18"
 versions.rxAndroid = "2.1.1"
+versions.dagger = "2.26"
 
 def testVersions = [:]
 testVersions.junit = "4.12"
@@ -47,6 +48,11 @@ mobius.extras = "com.spotify.mobius:mobius-extras:$versions.mobius"
 mobius.android = "com.spotify.mobius:mobius-android:$versions.mobius"
 mobius.rx2 = "com.spotify.mobius:mobius-rx2:$versions.mobius"
 deps.mobius = mobius
+
+def dagger = [:]
+dagger.dagger = "com.google.dagger:dagger:$versions.dagger"
+dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
+deps.dagger = dagger
 
 def glide = [:]
 glide.glide = "com.github.bumptech.glide:glide:$versions.glide"
