--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     tools:ignore="LockedOrientationActivity">
 
     <application
+        android:name="com.lockwood.themoviedb.MovieApplication"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,7 +26,7 @@
         </activity>
 
         <activity
-            android:name="com.lockwood.themoviedb.login.LoginActivity"
+            android:name="com.lockwood.themoviedb.login.presentation.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
 
