Добавить зависимость fragment; Реализовать FragmentFactory; Добавить Inject тостера в LoginFragment

--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation deps.kotlin.stdlib
 
     implementation deps.android.appcompat
+    implementation deps.android.fragment
     implementation deps.material.material
 
     implementation deps.dagger.dagger
