--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -6,6 +6,7 @@ versions.coreKtx = "1.2.0"
 versions.appcompat = "1.1.0"
 versions.material = "1.2.0-alpha05"
 versions.recyclerview = "1.1.0"
+versions.fragment = "1.3.0-alpha01"
 versions.cardview = "1.0.0"
 versions.preference = "1.1.0"
 versions.security = "1.0.0-alpha02"
@@ -22,6 +23,7 @@ testVersions.espressoCore = "3.2.0"
 
 def android = [:]
 android.appcompat = "androidx.appcompat:appcompat:$versions.appcompat"
+android.fragment = "androidx.fragment:fragment-ktx:$versions.fragment"
 android.recyclerview = "androidx.appcompat:appcompat:$versions.appcompat"
 android.cardview = "androidx.appcompat:appcompat:$versions.appcompat"
 android.preference = "androidx.appcompat:appcompat:$versions.appcompat"
