Упростить implementation и kapt

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -29,20 +29,21 @@ android {
 }
 
 dependencies {
-    implementation deps.kotlin.stdlib
-    implementation deps.kotlin.coreKtx
 
-    implementation deps.android.appcompat
-    implementation deps.material.material
+    implementation (
+            deps.kotlin.stdlib,
+            deps.kotlin.coreKtx,
+            deps.android.appcompat,
+            deps.material.material,
+            deps.rxJava.rx2,
+            deps.rxJava.rxAndroid,
+            deps.dagger.dagger,
+            deps.mobius.core,
+            deps.mobius.extras,
+            deps.mobius.rx2,
+            deps.mobius.android
+    )
 
-    implementation deps.dagger.dagger
-    kapt deps.dagger.compiler
+    kapt (deps.dagger.compiler)
 
-    implementation deps.rxJava.rx2
-    implementation deps.rxJava.rxAndroid
-
-    implementation deps.mobius.core
-    implementation deps.mobius.extras
-    implementation deps.mobius.rx2
-    implementation deps.mobius.android
 }
