--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -2,7 +2,7 @@ ext.deps = [:]
 
 def versions = [:]
 versions.kotlin = "1.3.60"
-versions.coreKtx = "1.2.0"
+versions.ktx = "1.2.0"
 versions.appcompat = "1.1.0"
 versions.material = "1.2.0-alpha05"
 versions.recyclerview = "1.1.0"
@@ -27,6 +27,7 @@ android.recyclerview = "androidx.appcompat:appcompat:$versions.appcompat"
 android.cardview = "androidx.appcompat:appcompat:$versions.appcompat"
 android.preference = "androidx.appcompat:appcompat:$versions.appcompat"
 android.security = "androidx.appcompat:appcompat:$versions.appcompat"
+android.ktx = "androidx.core:core-ktx:$versions.ktx"
 deps.android = android
 
 def material = [:]
@@ -35,7 +36,6 @@ deps.material = material
 
 def kotlin = [:]
 kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
-kotlin.coreKtx = "androidx.core:core-ktx:$versions.coreKtx"
 deps.kotlin = kotlin
 
 def rxJava = [:]
