--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,16 +30,14 @@ android {
 
 dependencies {
 
-    implementation (
+    implementation(
             deps.kotlin.stdlib,
-            deps.kotlin.coreKtx,
             deps.android.appcompat,
+            deps.android.ktx,
             deps.material.material,
-            deps.rxJava.rx2,
-            deps.rxJava.rxAndroid,
             deps.dagger.dagger
     )
 
-    kapt (deps.dagger.compiler)
+    kapt(deps.dagger.compiler)
 
 }
