--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -31,14 +31,14 @@ android {
 dependencies {
     implementation project(":core")
 
-    implementation (
+    implementation(
             deps.kotlin.stdlib,
-            deps.kotlin.coreKtx,
             deps.android.appcompat,
+            deps.android.ktx,
             deps.material.material,
+            deps.dagger.dagger,
             deps.rxJava.rx2,
-            deps.rxJava.rxAndroid,
-            deps.dagger.dagger
+            deps.rxJava.rxAndroid
     )
 
     kapt (deps.dagger.compiler)
