--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "scabbard.gradle"
+apply from: 'https://raw.githubusercontent.com/JakeWharton/SdkSearch/master/gradle/projectDependencyGraph.gradle'
 
 apply from: rootProject.file('buildsystem/versions.gradle')
 apply from: rootProject.file('buildsystem/dependencies.gradle')
@@ -44,6 +46,10 @@ android {
         jvmTarget = "1.8"
     }
 
+}
+
+scabbard {
+    enabled true
 }
 
 dependencies {
