--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "gradle.plugin.dev.arunkumar:scabbard-gradle-plugin:0.2.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
