--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -8,6 +8,7 @@ versions.material = "1.2.0-alpha05"
 versions.recyclerview = "1.1.0"
 versions.fragment = "1.3.0-alpha01"
 versions.cardview = "1.0.0"
+versions.constraint = "2.0.0-beta4"
 versions.preference = "1.1.0"
 versions.security = "1.0.0-alpha02"
 versions.glide = "4.11.0"
@@ -25,6 +26,7 @@ android.appcompat = "androidx.appcompat:appcompat:$versions.appcompat"
 android.fragment = "androidx.fragment:fragment-ktx:$versions.fragment"
 android.recyclerview = "androidx.appcompat:appcompat:$versions.appcompat"
 android.cardview = "androidx.appcompat:appcompat:$versions.appcompat"
+android.constraint = "androidx.constraintlayout:constraintlayout:$versions.constraint"
 android.preference = "androidx.appcompat:appcompat:$versions.appcompat"
 android.security = "androidx.appcompat:appcompat:$versions.appcompat"
 android.ktx = "androidx.core:core-ktx:$versions.ktx"
