--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,9 @@ dependencies {
             deps.android.appcompat,
             deps.android.ktx,
             deps.material.material,
+            deps.lifecycle.viewmodel,
+            deps.lifecycle.savedstate,
+            deps.lifecycle.common,
             deps.dagger.dagger
     )
 
