--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -17,6 +17,7 @@ versions.glide = "4.11.0"
 versions.rx2 = "2.2.18"
 versions.rxAndroid = "2.1.1"
 versions.dagger = "2.26"
+versions.assistedInject = "0.5.2"
 
 def testVersions = [:]
 testVersions.junit = "4.12"
@@ -57,6 +58,8 @@ deps.rxJava = rxJava
 def dagger = [:]
 dagger.dagger = "com.google.dagger:dagger:$versions.dagger"
 dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
+dagger.assistedInject = "com.squareup.inject:assisted-inject-annotations-dagger2:$versions.assistedInject"
+dagger.assistedInjectProcessor = "com.squareup.inject:assisted-inject-processor-dagger2:$versions.assistedInject"
 deps.dagger = dagger
 
 def glide = [:]
