--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name="com.lockwood.themoviedb.login.presentation.LoginActivity"
+            android:name="com.lockwood.themoviedb.login.presentation.ui.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
 
