Добавить зависимость room

--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -19,6 +19,7 @@ versions.rxAndroid = "2.1.1"
 versions.dagger = "2.26"
 versions.assistedInject = "0.5.2"
 versions.retrofit2 = "2.7.2"
+versions.room = "2.2.4"
 
 def testVersions = [:]
 testVersions.junit = "4.12"
@@ -54,6 +55,13 @@ deps.kotlin = kotlin
 def network = [:]
 network.retrofit2 = "com.squareup.retrofit2:retrofit:$versions.retrofit2"
 deps.network = network
+
+def room = [:]
+room.runtime = "androidx.room:room-runtime:$versions.room"
+room.compiler = "androidx.room:room-compiler:$versions.room"
+room.rx2 = "androidx.room:room-rxjava2:$versions.room"
+room.testing = "androidx.room:room-testing:$versions.room"
+deps.room = room
 
 def rxJava = [:]
 rxJava.rx2 = "io.reactivex.rxjava2:rxjava:$versions.rx2"
