--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -11,6 +11,7 @@ versions.cardview = "1.0.0"
 versions.constraint = "2.0.0-beta4"
 versions.lifecycle = "2.2.0"
 versions.arch = "2.1.0"
+versions.navigation = "2.3.0-alpha03"
 versions.preference = "1.1.0"
 versions.security = "1.0.0-alpha02"
 versions.glide = "4.11.0"
@@ -35,6 +36,12 @@ android.constraint = "androidx.constraintlayout:constraintlayout:$versions.const
 android.preference = "androidx.appcompat:appcompat:$versions.appcompat"
 android.security = "androidx.appcompat:appcompat:$versions.appcompat"
 android.ktx = "androidx.core:core-ktx:$versions.ktx"
+deps.android = android
+
+def navigation = [:]
+android.fragment = "androidx.navigation:navigation-fragment-ktx:$versions.navigation"
+android.ui = "androidx.navigation:navigation-ui-ktx:$versions.navigation"
+android.testing = "androidx.navigation:navigation-testing:$versions.navigation"
 deps.android = android
 
 def lifecycle = [:]
@@ -71,9 +78,12 @@ deps.rxJava = rxJava
 def dagger = [:]
 dagger.dagger = "com.google.dagger:dagger:$versions.dagger"
 dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
-dagger.assistedInject = "com.squareup.inject:assisted-inject-annotations-dagger2:$versions.assistedInject"
-dagger.assistedInjectProcessor = "com.squareup.inject:assisted-inject-processor-dagger2:$versions.assistedInject"
 deps.dagger = dagger
+
+def assisted = [:]
+assisted.inject = "com.squareup.inject:assisted-inject-annotations-dagger2:$versions.assistedInject"
+assisted.processor = "com.squareup.inject:assisted-inject-processor-dagger2:$versions.assistedInject"
+deps.assisted = assisted
 
 def glide = [:]
 glide.glide = "com.github.bumptech.glide:glide:$versions.glide"
