--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ scabbard {
 dependencies {
     implementation project(":core")
     implementation project(":features:login")
+    implementation project(":features:movies")
+    implementation project(":features:user")
 
     implementation(
             deps.kotlin.stdlib,
