--- a/features/user/src/main/AndroidManifest.xml
+++ b/features/user/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lockwood.themoviedb.movies">
+    package="com.lockwood.themoviedb.user">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
