Обновить заглушку в fragment_search и использовать её в activty_main

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
             deps.android.appcompat,
             deps.android.ktx,
             deps.android.fragment,
+            deps.android.constraint,
             deps.material.material,
             deps.navigation.fragment,
             deps.navigation.ui,
