--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -22,6 +22,7 @@ versions.assistedInject = "0.5.2"
 versions.retrofit2 = "2.7.2"
 versions.room = "2.2.4"
 versions.timber = "4.7.1"
+versions.moshi = "1.9.2"
 
 def testVersions = [:]
 testVersions.junit = "4.12"
@@ -62,6 +63,8 @@ deps.kotlin = kotlin
 
 def network = [:]
 network.retrofit2 = "com.squareup.retrofit2:retrofit:$versions.retrofit2"
+network.moshi = "com.squareup.moshi:moshi:$versions.moshi"
+network.moshicodegen = "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshi"
 deps.network = network
 
 def room = [:]
@@ -88,7 +91,7 @@ deps.assisted = assisted
 
 def glide = [:]
 glide.glide = "com.github.bumptech.glide:glide:$versions.glide"
-glide.glideCompiler = "com.github.bumptech.glide:compiler:$versions.glide"
+glide.glidecompiler = "com.github.bumptech.glide:compiler:$versions.glide"
 deps.glide = glide
 
 def tools = [:]
