--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation(
             deps.kotlin.stdlib,
             deps.android.appcompat,
+            deps.android.preference,
+            deps.android.security,
             deps.material.material,
             deps.lifecycle.viewmodel,
             deps.lifecycle.common,
