--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,1 +1,6 @@
-<manifest package="com.lockwood.core" />
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    package="com.lockwood.core">
+
+    <uses-sdk tools:overrideLibrary="androidx.security" />
+
+</manifest>
