--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     implementation project(":core")
     implementation project(":core:network")
+    implementation project(":core:cache")
 
     implementation(
             deps.kotlin.stdlib,
