--- a/features/login/build.gradle
+++ b/features/login/build.gradle
@@ -31,7 +31,7 @@ android {
 dependencies {
     implementation project(":core")
     implementation project(":core:network")
-    implementation project(":core:cache")
+    implementation project(":core:preferences")
 
     implementation(
             deps.kotlin.stdlib,
