Добавить отображать в SnackBar — отсутствие соединения с сетью

--- a/core/network/src/main/AndroidManifest.xml
+++ b/core/network/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lockwood.themoviedb.core.network">
+    package="com.lockwood.core.network">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
