--- a/core/preferences/src/main/AndroidManifest.xml
+++ b/core/preferences/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:tools="http://schemas.android.com/tools"
-    package="com.lockwood.themoviedb.core.preferences">
+    package="com.lockwood.core.preferences">
 
     <uses-sdk tools:overrideLibrary="androidx.security" />
 
