Выполнение запросов необходимо также показывать пользователю в виде ProgressBar

--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -24,7 +24,7 @@ android {
         versionName versions.name
 
         consumerProguardFiles 'consumer-rules.pro'
-        buildConfigField("String", "BASE_URL", "\"https://api.themoviedb.org/3\"")
+        buildConfigField("String", "BASE_URL", "\"https://api.themoviedb.org/3/\"")
         buildConfigField("String", "MOVIES_API_KEY", "${secretProperties['movies_api_key']}")
     }
 
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core:preferences")
 
     implementation(
             deps.kotlin.stdlib,
