--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,8 +33,7 @@ dependencies {
     implementation(
             deps.kotlin.stdlib,
             deps.android.appcompat,
-            deps.android.preference,
-            deps.android.security,
+            deps.android.ktx,
             deps.material.material,
             deps.lifecycle.viewmodel,
             deps.lifecycle.common,
