--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation(
             deps.kotlin.stdlib,
             deps.android.appcompat,
+            deps.android.ktx,
             deps.network.retrofit2,
             deps.network.logging,
             deps.network.moshi,
