--- a/features/movies/build.gradle
+++ b/features/movies/build.gradle
@@ -42,6 +42,7 @@ dependencies {
             deps.rxJava.rxAndroid,
             deps.network.retrofit2,
             deps.network.moshi,
+            deps.tools.timber,
             deps.dagger.dagger
     )
 
