--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,6 +39,7 @@ dependencies {
             deps.lifecycle.common,
             deps.rxJava.rx2,
             deps.rxJava.rxAndroid,
+            deps.tools.timber,
             deps.dagger.dagger
     )
 
