--- a/features/user/build.gradle
+++ b/features/user/build.gradle
@@ -37,6 +37,7 @@ dependencies {
             deps.android.constraint,
             deps.android.ktx,
             deps.material.material,
+            deps.tools.timber,
             deps.dagger.dagger
     )
 
