Вынести конфигурации android модулей в отдельные файлы

--- a/core/preferences/build.gradle
+++ b/core/preferences/build.gradle
@@ -1,29 +1,4 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-
-android {
-    compileSdkVersion versions.compileSdk
-
-    defaultConfig {
-        minSdkVersion versions.minSdk
-        targetSdkVersion versions.targetSdk
-        versionCode versions.code
-        versionName versions.name
-
-        consumerProguardFiles 'consumer-rules.pro'
-    }
-
-    compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
-}
+apply from: rootProject.file('buildsystem/android-library.gradle')
 
 dependencies {
 
