--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,8 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
+apply from: rootProject.file('buildsystem/android-app.gradle')
 apply plugin: "scabbard.gradle"
 apply from: 'https://raw.githubusercontent.com/JakeWharton/SdkSearch/master/gradle/projectDependencyGraph.gradle'
 
-apply from: rootProject.file('buildsystem/versions.gradle')
-apply from: rootProject.file('buildsystem/dependencies.gradle')
-
 android {
-    compileSdkVersion versions.compileSdk
-
-    defaultConfig {
-        applicationId versions.appId
-        minSdkVersion versions.minSdk
-        targetSdkVersion versions.targetSdk
-        versionCode versions.code
-        versionName versions.name
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
@@ -36,14 +18,6 @@ android {
             debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-
-    compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
     }
 
 }
