--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
     implementation project(":core:preferences")
 
     implementation(
