--- a/core/preferences/build.gradle
+++ b/core/preferences/build.gradle
@@ -1,6 +1,7 @@
 apply from: rootProject.file('buildsystem/android-library.gradle')
 
 dependencies {
+    implementation project(":core")
 
     implementation(
             deps.kotlin.stdlib,
